--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,6 +42,7 @@
         <item name="android:textSize">15dp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:layout_height">50dp</item>
+        <item name="android:textCursorDrawable">@null</item>
     </style>
     <style name="TextViewsInformativos" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:gravity">center_vertical</item>
@@ -57,5 +58,9 @@
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">15dp</item>
+    </style>
+    <style name="roundedImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">49%</item>
     </style>
 </resources>
