--- a/app/src/main/res/layout/card_migrante.xml
+++ b/app/src/main/res/layout/card_migrante.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -15,12 +16,15 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:orientation="horizontal">
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imgCardMigrante"
                 android:layout_width="100dp"
-                android:padding="10dp"
                 android:layout_height="100dp"
-                android:src="@drawable/user"/>
+                android:src="@drawable/user"
+                android:padding="5dp"
+                app:strokeColor="@color/orange"
+                app:strokeWidth="1dp"
+                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -33,6 +37,7 @@
 
                     <TextView
                         android:layout_width="wrap_content"
+                        android:layout_marginLeft="10dp"
                         style="@style/TextViewsInformativos"
                         android:text="Nombre: "/>
                     <TextView
@@ -51,6 +56,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         style="@style/TextViewsInformativos"
+                        android:layout_marginLeft="10dp"
                         android:text="Num. Telefono: "/>
                     <TextView
                         android:id="@+id/txtTelefonoCardMigrante"
