--- a/app/src/main/res/layout/fragment_migrante.xml
+++ b/app/src/main/res/layout/fragment_migrante.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/txtBuscarMigrante"
                 android:layout_weight="2"
                 android:layout_gravity="center"
                 android:layout_width="0dp"
@@ -28,6 +28,7 @@
                 android:hint="Ingrese nombre persona" />
 
             <Button
+                android:id="@+id/btnBuscarMigrante"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_marginLeft="10dp"
