Finalizacion pantallas inicio y reservaciones

--- a/app/src/main/res/layout/activity_agregar_migrante.xml
+++ b/app/src/main/res/layout/activity_agregar_migrante.xml
@@ -18,7 +18,7 @@
         app:strokeColor="@color/orange"
         app:strokeWidth="1dp"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-        app:srcCompat="@drawable/user"/>
+        app:srcCompat="@drawable/user_new"/>
 
     <Button
         android:id="@+id/btnTomarFoto"
